--- a/Python/Python Concepts.ipynb
+++ b/Python/Python Concepts.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9b28bae",
+   "id": "e014112d",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "142062aa",
+   "id": "7caba021",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4da84e82",
+   "id": "0d460639",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "59219100",
+   "id": "5aaff6a2",
    "metadata": {},
    "outputs": [
     {
@@ -178,58 +178,305 @@
     "        - Lists\n",
     "        - Tuple\n",
     "        - Dictionary\n",
-    "        - Tuple"
+    "        - Sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "id": "61b21d91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = True\n",
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "43f106d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Lists\n",
     "lst = [10,10.2,'Python class',False]\n",
+    "lst\n",
+    "type(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b20214e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Tuple\n",
+    "\n",
+    "t = (14,12,'Python',True,10.2)\n",
+    "t\n",
+    "type(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2755b259",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Dictionary \n",
+    "\n",
+    "dictionary = {'name':'Anit','age':52,'location':'Mumbai'}\n",
+    "dictionary\n",
+    "type(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "55a7a0e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': ['ankit', 'suman', 'nikita'],\n",
+       " 'age': [21, 23, 25],\n",
+       " 'location': ['Mumbai', 'Pune', 'Goa']}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dictionary1 = {\n",
+    "    'name': ['ankit','suman','nikita'],\n",
+    "    'age' : [21,23,25],\n",
+    "    'location' : ['Mumbai','Pune','Goa']\n",
+    "}\n",
+    "\n",
+    "dictionary1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8a8eb541",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {1,2,3,4,5,6}\n",
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7b24d85a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Sets\n",
+    "\n",
+    "set1 = {10,20,133256.2,'Machine'}\n",
+    "set1\n",
+    "type(set1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eacdc4d1",
+   "metadata": {},
+   "source": [
+    "# List functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "cb9c73d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 12, 1.3, 'Python', False]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [10,12,1.3,'Python',False]\n",
     "lst"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b20214e8",
+   "execution_count": 39,
+   "id": "3e3968a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Tuple\n",
-    "\n",
-    "t = (14,12,'Python',True)\n",
-    "t"
+    "lst[3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2755b259",
+   "execution_count": 40,
+   "id": "219fe2b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Dictionary \n",
-    "\n",
-    "dictionary = {'name':'Anit','age':52,'location':'Mumbai'}\n",
-    "dictionary"
+    "lst[4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b24d85a",
+   "execution_count": 42,
+   "id": "d5b74065",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Sets\n",
-    "\n",
-    "set1 = {10,20,133256.2,'Machine'}\n",
-    "set1"
+    "#Add\n",
+    "lst.append('Machine Learning')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "46a90ced",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 12, 1.3, 'Python', False, 'Machine Learning']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "783f155d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list.append() takes exactly one argument (2 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[44], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m lst\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;241m41\u001b[39m,\u001b[38;5;241m45\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: list.append() takes exactly one argument (2 given)"
+     ]
+    }
+   ],
+   "source": [
+    "lst.append(41,45)"
    ]
   },
   {
