--- a/Python/Python Concepts.ipynb
+++ b/Python/Python Concepts.ipynb
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1dea609c",
+   "id": "05dc7313",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7bda35c6",
+   "id": "79f1269f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "88cbe5e8",
+   "id": "ecd4f16d",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0f20121d",
+   "id": "582994ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a9d8dd44",
+   "id": "1940e310",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b531b63f",
+   "id": "292350cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "92eb0811",
+   "id": "95582836",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2bbeb470",
+   "id": "0be33dd9",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "352574c7",
+   "id": "2b693ea4",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6300c4d0",
+   "id": "80819aaf",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e4a82c12",
+   "id": "f09b3bc4",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b9597dd3",
+   "id": "f6e3c5ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0c8d13a1",
+   "id": "bea4b0ed",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "04794695",
+   "id": "58d42f05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "72f3f290",
+   "id": "8a812b98",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b69dd701",
+   "id": "7ed4442e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "22974487",
+   "id": "f699aaad",
    "metadata": {},
    "outputs": [
     {
@@ -789,6 +789,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3b2242f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst.index(100)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b140965c",
    "metadata": {},
@@ -804,22 +825,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "ca9bdf4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 10\n",
+    "\n",
+    "a == b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "ecfddbdc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access given\n"
+     ]
+    }
+   ],
    "source": [
     "#if\n",
     "\n",
     "password = 1010\n",
     "\n",
     "if password == 1010:\n",
-    "    print('Access given')"
+    "    print('Access given')  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "1a8396e5",
    "metadata": {},
    "outputs": [],
@@ -834,12 +887,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "9873c423",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access given\n"
+     ]
+    }
+   ],
    "source": [
-    "password = 101110\n",
+    "password = 1010\n",
     "\n",
     "if password == 1010:\n",
     "    print('Access given')\n",
@@ -849,10 +910,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "9bad48f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your age: 7\n",
+      "$7\n"
+     ]
+    }
+   ],
    "source": [
     "#Elif\n",
     "\n",
@@ -861,7 +931,7 @@
     "#age < 60 : ticket price $25\n",
     "#age > 60 :ticket price $15\n",
     "\n",
-    "age = 2\n",
+    "age = int(input('Enter your age: '))\n",
     "\n",
     "if age < 5:\n",
     "    print('$2')\n",
@@ -871,6 +941,92 @@
     "    print('$25')\n",
     "else:\n",
     "    print('$15')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "452c7c78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xyz = '96'\n",
+    "\n",
+    "abc = bool(xyz)\n",
+    "type(abc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "ee4edcec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "af2d1903",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age\n",
+    "type(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "50f58c90",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[44], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m age \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m60\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "age > 60"
    ]
   },
   {
