--- a/Python/Python Concepts.ipynb
+++ b/Python/Python Concepts.ipynb
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d1c9f70c",
+   "id": "6556b146",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5b46a26b",
+   "id": "6f4d7a0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6431bc39",
+   "id": "5c6e6cab",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6b3541cc",
+   "id": "4d4e9292",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4dfb79fd",
+   "id": "f1bc60a9",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4c8955e1",
+   "id": "df18e54b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5f9ea9e3",
+   "id": "fa054f03",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ebf5ccc7",
+   "id": "cf59db0a",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4daaf098",
+   "id": "5dce4de6",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "eeb3f178",
+   "id": "79291ea5",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "53f2ab22",
+   "id": "88b371bb",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "15110189",
+   "id": "2c53396c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c27938d2",
+   "id": "88972d86",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2ce8b5ee",
+   "id": "760a62b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2e804954",
+   "id": "b636b3f9",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e1b0a96f",
+   "id": "c3a0079c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "59a34b96",
+   "id": "18c7d03c",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ae06ef7b",
+   "id": "9e6c4d55",
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6354c4a2",
+   "id": "be078db5",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "02ece633",
+   "id": "3a09bacf",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "98ec88c8",
+   "id": "e4cb983e",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7c5e9ce5",
+   "id": "4d0e0bc7",
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "96a29165",
+   "id": "5073b931",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "70adff9b",
+   "id": "e9a2bdc9",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2ee22f7d",
+   "id": "d40a54fa",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "11b99d98",
+   "id": "0ef3d401",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "7b20061d",
+   "id": "577fc008",
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "5f512135",
+   "id": "5587acdc",
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "16eca98c",
+   "id": "1a389abe",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "29a54a28",
+   "id": "c7d44530",
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb58ebb5",
+   "id": "76dbbacd",
    "metadata": {},
    "source": [
     "- Separetly store all even values in list called as even.\n",
@@ -1327,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "a1df79e4",
+   "id": "6f1dcd66",
    "metadata": {},
    "outputs": [
     {
@@ -1347,28 +1347,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "4308e835",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 72,
-   "id": "bab18c49",
-   "metadata": {},
+   "id": "a3134bf6",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1886,7 +1869,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "e262e9d9",
+   "id": "7055e17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1903,8 +1886,10 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "858eff32",
-   "metadata": {},
+   "id": "3c62cc68",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2174,8 +2159,10 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "2eb1ce1d",
-   "metadata": {},
+   "id": "e43b3b39",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2442,30 +2429,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c596d4b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad15a706",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2af7711d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "708b3f2a",
    "metadata": {},
@@ -2479,20 +2442,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c6cd0b2",
+   "execution_count": 79,
+   "id": "0ebd31e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78\n"
+     ]
+    }
+   ],
    "source": [
-    "def add():\n",
-    "    print(5+357684)\n",
-    "    \n",
-    "add()"
+    "print(78)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
+   "id": "ec903f4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet():\n",
+    "    print('Hello User')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "55b756e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello User\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "3c6cd0b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "add() takes 0 positional arguments but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[87], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd\u001b[39m():\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m5\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m357684\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m add(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: add() takes 0 positional arguments but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "def add():\n",
+    "    print(5+357684)\n",
+    "    \n",
+    "add(10,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "id": "f9f7e5da",
    "metadata": {},
    "outputs": [],
@@ -2505,17 +2527,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "dc9d611b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "423672\n"
+     ]
+    }
+   ],
    "source": [
-    "add(85,65)"
+    "add(68984,354688)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3112062",
+   "metadata": {},
+   "source": [
+    "# Format string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "5943e7f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'Ankit'\n",
+    "age = 25\n",
+    "location = \"pune\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f809241c",
+   "metadata": {},
+   "source": [
+    "- Print a sentence: Name of customer 'name'. He is 'age' yrs old. He lives in 'Location'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "61aafee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name of customer name. He is age yrs old. He live in location.\n",
+      "Name of customer Ankit He is 25 yrs old. He lives in  pune\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Name of customer name. He is age yrs old. He live in location.')\n",
+    "print('Name of customer',name,'He is',age,'yrs old.','He lives in ',location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e6991e5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name of customer is Ankit.He is 25 yrs old. He lives in pune \n"
+     ]
+    }
+   ],
+   "source": [
+    "#format string\n",
+    "\n",
+    "print(f\"Name of customer is {name}.He is {age} yrs old. He lives in {location} \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "151315b3",
    "metadata": {},
    "outputs": [],
@@ -2528,18 +2626,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f429fe6f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name of customer is Anit. Age of customer is 25. Customer location is Pune\n"
+     ]
+    }
+   ],
    "source": [
     "info('Anit',25,'Pune')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cc97c57f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def details():\n",
+    "    name = input('Enter your name: ')\n",
+    "    age = input('Enter your age: ')\n",
+    "    \n",
+    "    print(f\"Name is {name}. Age is {age} years old.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8dd02ccd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: sunita\n",
+      "Enter your age: 23\n",
+      "Name is sunita. Age is 23 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "details()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "376d86f3",
    "metadata": {},
    "outputs": [],
    "source": []
